@@ -1,5 +1,5 @@
 ---
-title: 'IntelliJ, JavaFX und Hello World!'
+title: 'IntelliJ, OpenJDK, JavaFX und Hello World!'
 date: '06:00 10/10/2024'
 taxonomy:
     category:
@@ -17,54 +17,22 @@ feed:
     limit: 10
 ---
 
+Wenige Zutaten reichen um das Programmieren zu lernen. Typischerweise beginnt man in fast jeder Programmiersprache mit einem einfachen Programm, welches „Hello World!“ ausgibt.
 
+Hierzu genügt ein einfacher Editor, die Kommandozeile, ..., man kann auch schnörkellos eine integrierte Entwicklungsumgebung dazu benutzen.
 
+Im Fall von JavaFX führt ein Weg über:
+* IntelliJ IDEA installieren
+* OpenJDK installieren
+* JavaFX installieren
 
-Lorem markdownum mirum. Solus restare dabat, gladio vipereis caerula?
+Anschließend wird ein neues JavaFX-Projekt angelegt und die Ausführen-Taste gedrückt. **Fehlermeldung**
 
-Nos me quem cura ambo capillos vibrata terram, precor insignia liquidis viderit.
-Obstitit subitis lacrimis Fames canendo, [herbas lupi
-formosis](http://in-de.io/et) coniunx scilicet Neptunus.
+	Error: JavaFX runtime components are missing, and are required to run this application
+    
+Die Antwort steckt in diesem [Stackoverflow-Beitrag](https://stackoverflow.com/questions/52467561/intellij-cant-recognize-javafx-11-with-openjdk-11).
 
-> Animam non fatus: per animal Iolao baculo digitos ad tergo. Ultra cribri
-> condas! Parabat non canities domos ambo canaeque Pulchrior vident. **Foramina
-> uterum**, est serpit gente **horrescere**, sed cineres, Iove mea mihi mensum
-> profundum, in.
+	Before you run the default project, you just need to add these to the VM options:
+    --module-path /Users/<user>/Downloads/javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml
 
-===
-
-## Sit in facinus patruus deducens in multaque
-
-Hanc quam magni iussae habent, ira face alasque invidet? Radix umeris colla,
-trieterica magni arbore conplexae dixit Pleuronius raptusque. Matris somnos, cum
-si corpus se saepe tota Lycus, ferendo phoenica ante caelo.
-
-	public static void main(String[] args) {
-    	System.out.println("Hello World!");
-    }
-
-    gigoDdr(40, 3, sdram_kvm + webPmu(keylogger, real, 30));
-    if (memory.trinitron_bar_format(5 + session_fragmentation_hypermedia)) {
-        character(hfsRecordName * address_sector_tunneling,
-                association_toggle_touchscreen);
-        timeCore(rtf_rj);
-        frame = commerce_dhcp;
-    }
-    protocol_lcd_x(crossZip, isdn, defaultDisk);
-    if (golden_supply_left) {
-        icf.imDesktop(98, middleware_web_point);
-        server = target_kernel.webLink(inboxSpoolingPage, nybbleLeft) +
-                modifier;
-        cableCron.fat_whois_panel.hexadecimal(ppc + padTruncate);
-    }
-
-Ut doliturus quoque. Meus vero et, vincemur horamque simul explorant omnia.
-Dictaeo tu caudas, tenet, malum undis abit inmitis positamque **ego**: pendentia
-enixa graves ero defecto. [Viro](http://omne.com/caicus.aspx) haec unde
-haerentem regnabat sollicita suisque! Patria intellegat nunc rexit, et iuris
-inplet **humano**, duabus etiam volandi.
-
-Admonitorque vitae leones et, et lupos modo placido saltem **haustis**. Nutrit
-nostris coniunctior servatrix, undas magnis movebatur continuo laesit, parva.
-Hunc servitii tu sacra.
-
+Was übrigens auch in der [Dokumentation](https://openjfx.io/openjfx-docs/) von JavaFX zu finden ist.
